--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -5,4 +5,6 @@
     <string name="remove_fav_msg">പ്രിയപ്പെട്ടവയില്‍ നിന്ന് കളഞ്ഞു </string>
     <string name="favorite_count">☆ %1$dപേര്‍ക്ക് ഇത് പ്രിയപ്പെട്ടതാണ് ☆</string>
     <string name="share_image">ചിത്രം കൈമാറുക </string>
+    <string name="similar_products">%1$s ലെ സമാന ഇനങ്ങള്‍ </string>
+    <string name="related_products">നിങ്ങളെ പൂര്‍ണമാക്കാന്‍ </string>
 </resources>
