--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,26 @@
     <string name="share_image">Share Image</string>
     <string name="similar_products">Similar products in %1$s</string>
     <string name="related_products">Complete your looks</string>
+    <string name="email">E-mail</string>
+    <string name="email_error_msg">Enter a valid e-mail</string>
+    <string name="login_error_msg">Please enter your e-mail and password</string>
+    <string name="cancel">Cancel</string>
+    <string name="new_password">New Password</string>
+    <string name="old_password">Old Password</string>
+    <string name="enter_valid_information">Enter Valid Information</string>
+    <string name="password_incorrect_msg">Password Incorrect</string>
+    <string name="please_login">Please Login</string>
+    <string name="you_are_logged_in_as">You are logged in as :</string>
+    <string name="user_name">Name</string>
+    <string name="password">Password</string>
+    <string name="login">Log in</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="logout">Log out</string>
+    <string name="password_again">Confirm Password</string>
+    <string name="mob_no">Mobile Number</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="dob">Date of Birth</string>
+    <string name="pick_a_date">Pick a date</string>
+    <string name="anniversary">Anniversary</string>
 </resources>
