--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="wait">Please wait</string>
     <string name="url" translatable="false">http://192.168.1.107:222/</string>
     <string name="ok_button">OK</string>
+    <string name="network_off_alert">Plean turn on internet</string>
+    <string name="since">Since : %1$s</string>
 </resources>
