--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="ok_button">OK</string>
     <string name="network_off_alert">Plean turn on internet</string>
     <string name="since">Since : %1$s</string>
+    <string name="mob_no_error">Enter valid mobile number</string>
+    <string name="no_pass_error">Enter password</string>
+    <string name="name_error">Enter a valid name</string>
+    <string name="email_error">Enter valid e-mail</string>
 </resources>
