--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,18 +10,12 @@
     <string name="email_error_msg">Enter a valid e-mail</string>
     <string name="login_error_msg">Please enter your e-mail and password</string>
     <string name="cancel">Cancel</string>
-    <string name="new_password">New Password</string>
-    <string name="old_password">Old Password</string>
     <string name="enter_valid_information">Enter Valid Information</string>
-    <string name="password_incorrect_msg">Password Incorrect</string>
     <string name="please_login">Please Login</string>
-    <string name="you_are_logged_in_as">You are logged in as :</string>
     <string name="user_name">Name</string>
-    <string name="password">Password</string>
     <string name="login">Log in</string>
     <string name="sign_up">Sign Up</string>
     <string name="logout">Log out</string>
-    <string name="password_again">Confirm Password</string>
     <string name="mob_no">Mobile Number</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
@@ -33,10 +27,10 @@
     <string name="network_off_alert">Plean turn on internet</string>
     <string name="since">Since : %1$s</string>
     <string name="mob_no_error">Enter valid mobile number</string>
-    <string name="no_pass_error">Enter password</string>
     <string name="name_error">Enter a valid name</string>
     <string name="email_error">Enter valid e-mail</string>
     <string name="gender_error_msg">Please select gender</string>
     <string name="enter_otp">Please enter the four digit number you got through sms</string>
     <string name="rs">₹ : %1$s</string>
+    <string name="activate_account_q">Your account is deativated. Do you want to activate it?</string>
 </resources>
