--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,5 @@
     <string name="gender_error_msg">Please select gender</string>
     <string name="enter_otp">Please enter the four digit number you got through sms</string>
     <string name="rs">₹ : %1$s</string>
-    <string name="activate_account_q">Your account is deativated. Do you want to activate it?</string>
+    <string name="activate_account_q">Your account is Locked. Contact boutique.</string>
 </resources>
