product images, also in full screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="rs">₹ : %1$s</string>
     <string name="activate_account_q">Your account is Locked. Contact boutique.</string>
     <string name="my_favorites">✩ My Favorites</string>
+    <string name="exit_q">Are you sure you want to exit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
