--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,10 @@
     <string name="no_items">No items to display</string>
     <string name="favorites">Favorites</string>
     <string name="view_on_map">View on Map</string>
+    <string name="my_orders">My Orders</string>
+    <string name="order_date">Order Date</string>
+    <string name="expected_delivery_date">Expected Delivery Date</string>
+    <string name="last_updated">Last Updated</string>
+    <string name="your_order_is_ready">Your order is Ready!!</string>
+    <string name="item_delivered">Item delivered</string>
 </resources>
