--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,7 @@
     <string name="write_a_review">Write a review</string>
     <string name="submit">Submit</string>
     <string name="delete_review_q">Do you want to delete this review?</string>
+    <string name="my_orders_sidebar">≡ My Orders</string>
+    <string name="trending">⏫ Trending</string>
+    <string name="trending_products">Trending Products</string>
 </resources>
