--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="trending">⏫ Trending</string>
     <string name="trending_products">Trending Products</string>
     <string name="new_message">"You have a new message"</string>
+    <string name="msg_notification">You have new messages</string>
 </resources>
