--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="splash_title">Boutique App</string>
     <string name="splash_tagline">- Meet the styles -</string>
     <string name="your_loyalty_card_number_is">Your loyalty card number is</string>
+    <string name="out_of_Stock">Out of Stock</string>
+    <string name="in_stock">In Stock</string>
 </resources>
