--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="your_loyalty_card_number_is">Your loyalty card number is</string>
     <string name="out_of_Stock">Out of Stock</string>
     <string name="in_stock">In Stock</string>
+    <string name="view_your_order_status">View your order status</string>
 </resources>
