--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,9 @@
     <string name="dob">Date of Birth</string>
     <string name="anniversary">Anniversary</string>
     <string name="wait">Please wait</string>
-    <string name="url" translatable="false">http://tiquesinn.com/</string>
+    <!--<string name="url" translatable="false">http://tiquesinn.com/</string>-->
     <!--<string name="url" translatable="false">http://jdadmin-001-site2.itempurl.com/</string>-->
-    <!--<string name="url" translatable="false">http://192.168.1.107:222/</string>-->
+    <string name="url" translatable="false">http://192.168.1.107:222/</string>
     <string name="ok_button">OK</string>
     <string name="network_off_alert">Please turn on internet</string>
     <string name="since">Since : %1$s</string>
@@ -47,6 +47,7 @@
     <string name="share_text_sub">See this app of %1$s for new styles</string>
     <string name="referral_loyalty">Referral Loyalty Card Number (Optional)</string>
     <string name="no_items">No items to display</string>
+    <string name="no_reviews">Be the first one to review this product</string>
     <string name="favorites">Favorites</string>
     <string name="view_on_map">View on Map</string>
     <string name="my_orders">My Orders</string>
